<resources>
    <string name="app_name">ChatApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_continue">Login to continue.</string>
    <string name="welcome_back">Welcome to ChatChit!</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="creating_new_account">Creating New Account</string>
    <string name="add_image">Add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sigh_in">Sigh In</string>
    <string name="already_have_a_account">Already have a account ?</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="setting_profile">Setting Profile</string>
    <string name="change_name">Change name:</string>
    <string name="change_image">Change Image</string>
    <string name="save_change">Save change</string>
    <string name="new_password">New password:</string>
    <string name="current_password">Current Password</string>
</resources>